# markurl

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
markurl/: __init__.py  adapter.py  arxiv.py  config.py  core.py  crossref.py  main.py  model.py  util.py
markurl/adapter/: __init__.py  adapter.py  arxiv.py  bilibili.py  crossref.py  model.py  paper.py  video.py
markurl/handler/: bilibili.py  blog.py  douban.py  git.py  model.py  paper.py  video.py  webpage.py  wiki.py  zhihu.py
