[project]
name = "markurl"
version = "0.1.0"
description = "A tool for generating formatted Markdown from URLs"
authors = [
    {name = "YorkSu", email = "york_su@qq.com"},
]
dependencies = [
    "requests>=2.28.2",
    "bs4>=0.0.1",
    "autopep8>=2.0.1",
    "unidecode>=1.3.6",
    "lxml>=4.9.2",
    "pytube>=12.1.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
markurl = "python markurl/main.py"
mu = "python markurl/main.py"
